fix: removed dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@ body {
 }
 
 body {
-  color: var(--background);
-  background: var(--foreground);
+  color: var(--foreground);
+  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
